@@ -16,40 +16,37 @@
  * limitations under the License.
  */
 
-package me.mneri.csv.benchmark.runner;
+package me.mneri.csv.benchmark.compare.runner;
 
-import me.mneri.csv.benchmark.BenchmarkConstants;
-import me.mneri.csv.benchmark.BenchmarkState;
-import org.apache.commons.csv.CSVFormat;
-import org.apache.commons.csv.CSVParser;
-import org.apache.commons.csv.CSVRecord;
+import me.mneri.csv.CsvReader;
+import me.mneri.csv.benchmark.compare.BenchmarkConstants;
+import me.mneri.csv.benchmark.compare.BenchmarkState;
+import me.mneri.csv.deserializer.StringArrayDeserializer;
 import org.openjdk.jmh.annotations.*;
 import org.openjdk.jmh.infra.Blackhole;
 
-import java.io.FileReader;
 import java.io.IOException;
 import java.util.concurrent.TimeUnit;
 
 @BenchmarkMode(Mode.AverageTime)
-@Fork(BenchmarkConstants.FORKS)
 @OutputTimeUnit(TimeUnit.MILLISECONDS)
 @Warmup(iterations = BenchmarkConstants.WARMUP_ITERATIONS)
 @Measurement(iterations = BenchmarkConstants.MEASUREMENT_ITERATIONS)
-public class CommonsCsvBenchmark {
+public abstract class MneriCsvBenchmark {
     @Benchmark
     public void run(BenchmarkState state, Blackhole bh) throws IOException {
-        try (CSVParser parser = CSVFormat.DEFAULT.parse(new FileReader(state.file(), state.charset()))) {
-            for (CSVRecord record : parser) {
-                bh.consume(toDomain(record));
+        try (CsvReader<String[]> reader = CsvReader.open(state.file(), state.charset(), new StringArrayDeserializer())) {
+            while (reader.hasNext()) {
+                bh.consume(reader.next());
             }
         }
     }
 
-    private String[] toDomain(CSVRecord record) {
-        String[] out = new String[record.size()];
-        for (int i = 0; i < out.length; i++) {
-            out[i] = record.get(i);
-        }
-        return out;
+    @Fork(BenchmarkConstants.FORKS)
+    public static class Sequential extends MneriCsvBenchmark {
+    }
+
+    @Fork(value = BenchmarkConstants.FORKS, jvmArgsPrepend = "--add-modules=jdk.incubator.vector")
+    public static class Vector extends MneriCsvBenchmark {
     }
 }
